<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCountry"
        android:text="@string/main_country" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinCountry" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/filterLayout">
        <TextView
            android:text="@string/main_year"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textYear" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout1">

            <EditText
                android:id="@+id/editYearFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:maxLength="4"
                android:numeric="integer"/>

            <TextView
                android:text="@string/main_to"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/editYearTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:inputType="number"
                android:maxLength="4"
                android:numeric="integer"/>
            <Button
                android:text="@string/main_copy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnCopyYear"
                android:onClick="onCopyYearClick"
                android:layout_gravity="center_vertical"/>
            <Button
                android:text="@string/main_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnClearYear"
                android:onClick="onClearYearClick"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:text="@string/main_filter"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">
            <EditText
                android:id="@+id/editFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:inputType="text"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_inverse"
                android:id="@+id/cbInverse"
                android:layout_gravity="center_vertical"
                android:onClick="onInverseClick"/>
            <Button
                android:text="@string/main_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnClearFilter"
                android:onClick="onClearFilterClick"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listItems" />
</LinearLayout>