<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="32dip">
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barProgress" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout1">
        <TextView
            android:text="@string/dl_numista_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textNumistaID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />
        <EditText
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/editNumistaID"
            android:layout_weight="1" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dl_debugging"
        android:id="@+id/cbDebugging"/>

    <Button
        android:text="@string/dl_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDownload"
        android:onClick="onDownloadClick" />
</LinearLayout>